samples/_failures_safe/1761645213_be5c11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b21afbdb.c: In function ‘main’:
./samples/SAFE/__tmp_b21afbdb.c:176:9: error: expected declaration or statement at end of input
  176 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_b21afbdb.c:176:9: error: expected declaration or statement at end of input
